# fuwari

./: .gitignore  .qmlls.ini  AnkiTab.qml  CardPreviewWindow.qml  DefinitionWindow.qml  DictionariesTab.qml  FirstRunWindow.qml  GeneralTab.qml  HistoryWindow.qml  README.md  SettingsWindow.qml  anki.py  bridge.py  build-appimage.sh  dictionary.py  fuwari.desktop  layer_shell.py  main.py  main.qml  migrate.py  ocr.py  requirements.txt  settings.py  setup.sh  t --count HEAD
fuwari-layer-shell/: Cargo.toml
fuwari-layer-shell/examples/: test_capture.rs  test_drag.rs  test_select.rs
fuwari-layer-shell/src/: event_loop.rs  layer.rs  lib.rs  types.rs
